--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,7 +1,7 @@
 $primary-color: #444;
 $secondary-color: #eece1a;
 $show-home-image: true;
-$home-image: url("/img/background.jpg");
+$home-image: url(../img/background.jpg);
 $background-opacity: 0.2;
 @mixin easeOut {
     transition: all 0.5s ease-out;
@@ -29,7 +29,7 @@ $background-opacity: 0.2;
 
 // Set Text Color
 @function set-text-color($color) {
-    @if (lightness($color)>40) {
+    @if (lightness($color) >40) {
         @return #000;
     }
     @else {
