--- a/css/main.css
+++ b/css/main.css
@@ -471,13 +471,13 @@
  }
  
  .pace .pace-progress {
-   background: #f9a828;
+   background: white;
    position: fixed;
    z-index: 900;
    top: 0;
    right: 100%;
    width: 100%;
-   height: 6px;
+   height: 3px;
  }
  
  
@@ -510,7 +510,7 @@
    margin-left: -30px;
    margin-top: -30px;
    padding: 0;
-   background-color: #f9a828;
+   background-color: white;
    border-radius: 100%;
    -webkit-animation: sk-scaleout 1.0s infinite ease-in-out;
    animation: sk-scaleout 1.0s infinite ease-in-out;
